Alignement fixup.

--- a/css/esper.less
+++ b/css/esper.less
@@ -304,8 +304,8 @@ textarea.esper-input { resize: none; }
 /* Element containing the Esper logo (right) */
 .esper-menu {
   display: inline-block;
-  height: 24px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   vertical-align: middle;
 }
 
@@ -324,10 +324,8 @@ textarea.esper-input { resize: none; }
   width: 16px;
   height: 20px;
   &.esper-menu-white {
-    margin: 5px 6px 2px 6px;
   }
   &.esper-menu-black {
-    margin: 5px 7px;
     opacity: 0.47;
     &:hover { opacity: 0.85; }
   }
